# msmbuilder2022

./: .gitignore  README.md  basesetup.py  codecov.yml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-code.yml  build-wheels.yml  coverage.yml
devtools/conda-recipe/: meta.yaml
docs/: changelog.rst
examples/: Clustering-Comparison.ipynb
msmbuilder/: cmdline.py  dataset.py
msmbuilder/cluster/: __init__.py  apm.py  base.py
msmbuilder/commands/: featurizer.py
msmbuilder/decomposition/: _speigh.pyx  base.py  tica.py  utils.py
msmbuilder/example_datasets/: .gitignore
msmbuilder/featurizer/: featurizer.py  multichain.py
msmbuilder/hmm/: gaussian.pyx  vonmises.pyx
msmbuilder/io/: project_template.py
msmbuilder/libdistance/: .gitignore
msmbuilder/lumping/: __init__.py  mvca.py
msmbuilder/msm/: _metzner_mcmc_slow.py  core.py  msm.py
msmbuilder/preprocessing/: __init__.py  base.py  timeseries.py
msmbuilder/tests/: .gitignore  data_init  data_init.py  test_apm.py  test_bayes_ratematrix.py  test_clustering.py  test_commands.py  test_commands_exist.py  test_contactfeaturizers.py  test_dataset.py  test_decomposition.py  test_feature_descriptor.py  test_featureunion.py  test_kmedoids.py  test_libdistance.py  test_lumping.py  test_msm.py  test_param_sweep.py  test_preprocessing.py  test_rmsdfeaturizer.py  test_sasa_featurizer.py  test_speigh.py  test_utils.py  test_vmhmm.py
msmbuilder/tpt/: committor.py  hub.py  mfpt.py  path.py
msmbuilder/utils/: divergence.py  io.py  param_sweep.py
(+3 files in other folders)
